--- a/Home.css
+++ b/Home.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    background-image: url(./Backdround/back1.jpg);
+    /* background-image: url(./Backdround/back1.jpg); */
 }
 .container{
     background-color: bisque;
